<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Layout for the tip calculator -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:srcCompat="@drawable/ic_store" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="@id/cost_of_service"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service" />

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tip_options"
            app:layout_constraintTop_toBottomOf="@id/tip_options" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Tip Amount: $10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Created by Oliwia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>